data/diff_tests/wasmtime/call_InvalidorInconsistentControlFlowGraph_3544.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\03\83\80\80\80\00\02\00\00\08\81\80\80\80"
    "\00\00\0a\93\80\80\80\00\02\84\80\80\80\00\00\10"
    "\01\0b\84\80\80\80\00\00\10\00\0b"
  )
""
)